--- a/views/lawlchatroom.jade
+++ b/views/lawlchatroom.jade
@@ -1,11 +1,13 @@
 doctype 5
 html(lang="en")
 	head
-		title= LawlChats
+		title LawlChats
 		script(type='text/javascript')
 			function junk() {
+				console.log('dildo');
 			}
 	body
 		h1 LawlChats
 		form(name='testsubmit', action='javascript:junk()', method='get')
 			input(type='text', name='testinput')
+			input(type='submit', name='testsubmitbutton', value='Go!')
