attempting to make socket.io work

--- a/views/lawlchatroom.jade
+++ b/views/lawlchatroom.jade
@@ -7,7 +7,8 @@ html(lang="en")
 				console.log('dildo');
 			}
 	body
-		h1 LawlChats
+		h1 LawlChat
 		form(name='testsubmit', action='javascript:junk()', method='get')
 			input(type='text', name='testinput')
 			input(type='submit', name='testsubmitbutton', value='Go!')
+	script(type= "text/javascript", src="/socket.io/socket.io.js")
