--- a/views/lawlchatroom.jade
+++ b/views/lawlchatroom.jade
@@ -1,14 +1,21 @@
 doctype 5
 html(lang="en")
-	head
-		title LawlChats
-		script(type='text/javascript')
-			function junk() {
-				console.log('dildo');
-			}
-	body
-		h1 LawlChat
-		form(name='testsubmit', action='javascript:junk()', method='get')
-			input(type='text', name='testinput')
-			input(type='submit', name='testsubmitbutton', value='Go!')
-	script(type= "text/javascript", src="/socket.io/socket.io.js")
+    head
+        title LawlChats
+        script(type='text/javascript')
+            function junk() {
+                console.log('dildo');
+            }
+    body
+        h1 LawlChat
+        form(name='testsubmit', action='javascript:junk()', method='get')
+            input(type='text', name='testinput')
+            input(type='submit', name='testsubmitbutton', value='Go!')
+    script(type= "text/javascript", src="/socket.io/socket.io.js")
+    script(type= "text/javascript")
+        var socket = io.connect(); // TIP: .connect with no args does auto-discovery
+        socket.on('connect', function () { // TIP: you can avoid listening on `connect` and listen on events directly too!
+            socket.emit('ferret', 'tobi', function (data) {
+                console.log(data); // data will be 'woot'
+            });
+        });
