--- a/views/lawlchatroom.jade
+++ b/views/lawlchatroom.jade
@@ -3,24 +3,12 @@ html(lang="en")
     head
         title LawlChats
 
-        script(type='text/javascript')
-            function junk() {
-                console.log('dildo');
-                var submitForm = document.forms[0];
-                var textVal = submitForm.elements["testinput"].value;
-                console.log('textVal = ' + textVal);
-                var xhr = new XMLHttpRequest();
-                xhr.open("POST", "/message/new/", true);
-                xhr.setRequestHeader("Content-type", "application/json");
-                xhr.send(JSON.stringify({'text':textVal, 'user':'ayousef'}));
-            }
-
         script(type= "text/javascript", src="/socket.io/socket.io.js")
         script(type= "text/javascript", src="/jquery/jquery.js")
     
     body
         h1 LawlChat
-        form(name='testsubmit', action='javascript:junk()', method='get', onsubmit="join_room()")
+        form(name='testsubmit', action="", method='get', onsubmit="join_room()")
             table
                 tr 
                     th Username: 
@@ -36,11 +24,11 @@ html(lang="en")
     script(type= "text/javascript")
         var socket = io.connect();
         var render_chatroom = function (chatroom) {
-            chatroomTable = "<table id=chats>"
+            chatroomTable = "<table id=chats>";
             for (line in chatroom.messagesObjectArray) {
-                chatroomTable += "<tr><th>"+line.username+"</th><td>"+line.message_text"</td></tr>";
+                chatroomTable += "<tr><th>"+line.username+"</th><td>"+line.message_text+"</td></tr>";
             }
-            chatroomTable += </table>;
+            chatroomTable += "</table>";
             $("#chatroom").html(chatroomTable);
         }
 
@@ -50,7 +38,7 @@ html(lang="en")
             socket.emit('join_room', { 'room': room, 'username': username});
         }
 
-        socket.on('chatroom', render_chatroom(chatroom)); 
+        socket.on('chatroom', render_chatroom); 
 
         socket.on('confirm_join', function (confirmation) {
             if (confirmation.confirmed) {
