--- a/views/lawlchatroom.jade
+++ b/views/lawlchatroom.jade
@@ -22,12 +22,12 @@ html(lang="en")
         div(id='chatroom', style='display:none;')
         div(id='enter_text', style='display:none;')
             input(type='text', name='message_text', id='message_text')
-            input
+            input(type='submit', id='send_message', value='Send Message', onclick='send_message()')
 
     script(type= "text/javascript")
         var socket = io.connect();
         var render_chatroom = function (chatroom) {
-            chatroomTable = "<table id=chats>";
+            chatroomTable = "<h3>"+chatroom.name+"</h3><table id=chats>";
             for (line in chatroom.messages) {
                 chatroomTable += "<tr><th>"+line.username+"</th><td>"+line.message_text+"</td></tr>";
             }
@@ -35,12 +35,8 @@ html(lang="en")
             console.log(chatroomTable);
             $("#chatroom").html(chatroomTable);
             $("#chatroom").show();
-            $("#enter_text").show();  
+            $("#enter_text").show();
         }
-
-        $('#join_form').submit(function (e) {
-            e.preventDefaults();
-        });
 
         var join_room = function () {
             console.log("join_room called");
@@ -52,10 +48,22 @@ html(lang="en")
 
         socket.on('chatroom', function (chatroom) {
             render_chatroom(chatroom);
-        }); 
+        });
+
+        var send_message = function () {
+            var message_text = $("#message_text").val();
+            if (message_text == '') { return; }
+            else {
+                socket.emit('enter_message', { 'message_text': message_text});
+            }
+        }
 
         socket.on('confirm_join', function (confirmation) {
             if (confirmation.confirmed) {
                 console.log("Joined room "+confirmation.room+" with name "+confirmation.username);
             }
+        });
+
+        socket.on('new_message', function (message) {
+            return;
         });
