--- a/views/lawlchatroom.jade
+++ b/views/lawlchatroom.jade
@@ -1,13 +1,13 @@
 doctype 5
 html(lang="en")
     head
-        title LawlChats
+        title LawlChatz
 
         script(type= "text/javascript", src="/socket.io/socket.io.js")
         script(type= "text/javascript", src="/jquery/jquery.js")
     
     body
-        h1 LawlChat
+        h1 LawlChatz
         div(id="sign_in")
             table
                 tr 
